# cinnamon-screensaver

./: .gitignore  AUTHORS  COPYING  COPYING.LIB  HACKING  Makefile.am  Makefile.in  NEWS  README  README.md  acinclude.m4  aclocal.m4  autogen.sh  cinnamon-screensaver.pot  config.h.in  configure  configure.ac  makepot  meson.build  meson_options.txt
.circleci/: config.yml
.github/: ISSUE_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yaml
.github/workflows/: build.yml
backup-locker/: cinnamon-unlock-desktop  cs-backup-locker.c  event-grabber.c  event-grabber.h  meson.build
data/: Makefile.am  Makefile.in  cinnamon-screensaver-command.1  cinnamon-screensaver.1  cinnamon-screensaver.desktop.in  cinnamon-screensaver.xml  cinnamon-screensaver.xml.in  meson.build  org.cinnamon.ScreenSaver.PAMHelper.service.in  org.cinnamon.ScreenSaver.desktop  org.cinnamon.ScreenSaver.service.in
data/icons/: Makefile.am  meson.build
data/screensavers/: Makefile.am  Makefile.in
data/screensavers/webkit/: main
data/screensavers/webkit@cinnamon.org/webkit-hanoi@cinnamon.org/: ease.js  index.html  main.js  math.js  metadata.json  script.js  style.css
data/screensavers/webkit@cinnamon.org/webkit-stars@cinnamon.org/: index.html
data/screensavers/xscreensaver/: main
debian/: README.Debian  changelog  cinnamon-screensaver-pam-helper.install  cinnamon-screensaver-webkit-plugin.install  cinnamon-screensaver-x-plugin.install  cinnamon-screensaver.dirs  cinnamon-screensaver.docs  cinnamon-screensaver.install  cinnamon-screensaver.lintian-overrides  cinnamon-screensaver.postinst  cinnamon-screensaver.prerm  control  control.in  copyright  gnome-screensaver.docs  gnome-screensaver.maintscript  libcscreensaver0.install  libcscreensaver0.install.in  not-installed  rules  source.apport  watch
debian/patches/: 03_fix_ltsp-fading.patch  04_force_blank_only_on_ltsp.patch  05_dbus_service.patch  10_legacy_scrsvr_inhibit.patch  11_autostart_delay.patch  13_nvidia_gamma_fade_fallback.patch  14_no_fade_on_user_switch.patch  15_dont_crash_on_no_fade.patch  17_remove_top_panel.patch  18_unity_dialog_layout.patch  19_autostart_in_unity.patch  26_lightdm_greeter_on_lock.patch  27_lightdm_switch_user.patch  series
doc/: Makefile.am  Makefile.in  cinnamon-screensaver.xml  dbus-interface.html  dbus-interface.xml  gnome-screensaver.xml
install-scripts/: meson.build  meson_compile_python.py
libcscreensaver/: Makefile.am  cs-auth-pam.c  cs-auth.h  cs-event-grabber.c  cs-gdk-event-filter-x11.c  cs-gdk-event-filter.c  cs-gdk-event-filter.h  cs-init-utils.c  cs-init-utils.h  cs-notification-watcher.c  cs-notification-watcher.h  cs-screen-x11.c  cs-screen.h  cscreensaver-gdk-event-filter.c  cscreensaver-gdk-event-filter.h  cscreensaver-uninstalled.pc.in  cscreensaver.pc.in  g-codegen.py  meson.build  org.Cinnamon.xml  org.cinnamon.Muffin.DisplayConfig.xml  org.cinnamon.ScreenSaver.xml  org.cinnamon.SettingsDaemon.KeybindingHandler.xml  org.freedesktop.Accounts.User.xml  org.freedesktop.Accounts.xml  org.freedesktop.ConsoleKit.Manager.xml  org.freedesktop.ConsoleKit.Session.xml  org.freedesktop.Notifications.xml  org.freedesktop.UPower.Device.xml  org.freedesktop.UPower.xml  org.freedesktop.login1.Manager.xml  org.freedesktop.login1.Session.xml  org.gnome.SessionManager.Presence.xml  org.mpris.MediaPlayer2.Player.xml  setuid.c  test-passwd.c
po/: POTFILES.in  POTFILES.skip  af.po  an.po  ar.po  as.po  ast.po  be.po  be@latin.po  bg.po  bn.po  bn_IN.po  br.po  ca.po  ca@valencia.po  crh.po  cs.po  cy.po  da.po  de.po  dz.po  el.po  en@shaw.po  en_CA.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  ga.po  gl.po  gu.po  he.po  hi.po  hr.po  hu.po  id.po  (+49 more)
screensavers/: Makefile.am
screensavers/webkit@cinnamon.org/: Makefile.am  main
screensavers/webkit@cinnamon.org/webkit-stars@cinnamon.org/: Makefile.am  metadata.json
screensavers/xscreensaver@cinnamon.org/: Makefile.am  main  safechild
src/: Makefile.am  Makefile.in  albumArt.py  application.css  audioBar.py  audioPanel.py  authenticator.py  baseWindow.py  binfile.in  bus.h  cinnamon-screensaver-command.c  cinnamon-screensaver-command.in  cinnamon-screensaver-command.py  cinnamon-screensaver-dialog.c  cinnamon-screensaver-gtk3.14.css  cinnamon-screensaver-gtk3.18.css  cinnamon-screensaver-gtk3.20.css  cinnamon-screensaver-main.py  cinnamon-screensaver-pam-helper.in  cinnamon-screensaver.c  cinnamon-screensaver.css  cinnamon-screensaver.desktop.in  cinnamon-screensaver.desktop.in.in  cinnamon-screensaver.h  cinnamon2d-screensaver.desktop.in.in  cinnamonProxy.py  clock.py  config.py.in  consoleKitProxy.py  constants.py  dbusClientManager.py  debug-screensaver.sh  eventHandler.py  fader.py  floating.py  focusNavigator.py  fullscreen.py  gnome-datetime-source.c  gnome-datetime-source.h  gnome-screensaver-dialog.c  (+72 more)
src/binfiles/: Makefile.am  cinnamon-screensaver-command.in  cinnamon-screensaver.c  cinnamon-screensaver.in
src/dbusdepot/: Makefile.am  accountsServiceClient.py  baseClient.py  cinnamonClient.py  consoleKitClient.py  keybindingHandlerClient.py  loginInterface.py  logindClient.py  mediaPlayerWatcher.py  meson.build  muffinClient.py  nameBlocker.py  notificationClient.py  screensaverClient.py  sessionClient.py  uPowerClient.py
src/pamhelper/: Makefile.am  authClient.py  cinnamon-screensaver-pam-helper.c  meson.build
src/screensavers/: Makefile.in
src/screensavers/webkit@cinnamon.org/: main
src/tests/: test-auth  test-layouts  test-notifications  test-osk
src/util/: Makefile.am  eventHandler.py  fader.py  focusNavigator.py  geojs.py  grabHelper.py  keybindings.py  keyboardLayout.py  location.py  meson.build  mplayer.py  openweathermap.py  settings.py  trackers.py  utils.py  weather.py  weather_types.py  x11.py
src/widgets/: Makefile.am  blinkingLabel.py  framedImage.py  marqueeLabel.py  meson.build  notificationWidget.py  positionBar.py  powerWidget.py  transparentButton.py  volumeSlider.py
